2003-08-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* ControlPaint.cs		DrawStringDisabled changed
	* Label.cs				painting moved inside OnPaint function
	* Button.cs				disposing Graphics in OnPaint
	* win32functions.cs		StringFormat2DrawTextFormat added

2003-07-31 Alexandre Pigolkine <pigolkine@gmx.de>
	* Control.cs : do not keep oldBounds if LAYOUT_SUSPENDED is true, 
					call OnMouseDown/Up functions
	* Button.cs
	* ButtonBase.cs		painting moved inside OnPaint function
	* NativeWindow.cs	(commented) debug output added

2003-07-31 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : anchoring algorithm was fixed to avoid inaccuracies caused by rounding
	* TextBoxBase.cs : set FixedHeight style for single line edit boxes

2003-07-30 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TextBox.cs : ScrollBars, AcceptsReturn, CharacterCasing properties were implemented

2003-07-29 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TextBoxBase.cs
	* TextBox.cs
	* Control.cs : BackColor, ForeColor, PasswordChar for edit boxes

2003-07-28  Miguel de Icaza  <miguel@ximian.com>

	* NativeWindow.cs: Remove debugigng messages.

	* Control.cs: Remove debugging messages.

	* Label.cs: Use the border style.

	* win32functions.cs: Set the default to WineLib now on Linux.

2003-07-23  Miguel de Icaza  <miguel@ximian.com>

	* win32functions.cs: Move functions that do not exist in WineLib
	over to Win32_Wineless, so we do not trigger the warning messages
	until a function tries to use them.

	Win32() constructor: Set a hint on the appdomain that we would
	prefer to have the System.Drawing API use the Win32 implementation
	of the API.
	
	* *.cs: Updated sources to use this.

2003-07-16 Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* ColorDialog.cs : implemented
	* win32functions.cs			
	* win32enums.cs
	* win32structs.cs : functions, flags and structs for ColorDialog

2003-07-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* win32Structs.cs			some fields cannot be marshaled
								OFNOTIFY structure simplified